# invisibleApp

./: .gitignore  CMakeLists.txt  HOW_IT_WORKS.md  InvisibleOverlay.sln  InvisibleOverlay.vcxproj  README.md  TECHNICAL_REFERENCE.md  build.bat  build_release.bat  compile.bat  installer.iss  package_zip.bat  resources.rc
src/: ai_service.cpp  ai_service.h  app.manifest  audio_capture.cpp  audio_capture.h  http_client.cpp  http_client.h  main.cpp  meeting_assistant.cpp  meeting_assistant.h  overlay_window.cpp  overlay_window.h  screen_capture.cpp  screen_capture.h  text_to_speech.cpp  text_to_speech.h  tray_icon.cpp  tray_icon.h  utils.h
